# litebus

./: ARCHITECTURE.md  CLAUDE.md  Makefile  example.py  example_prefect.py  pyproject.toml
docs/: api.md  architecture.md
litebus/: __init__.py  _bus.py  _di.py  _listener.py  _types.py
tests/: benchmark.py  test_litebus.py
