[project]
name = "litebus"
version = "0.1.0"
description = "Standalone event bus with dependency injection"
authors = [
    { name = "chiendo97", email = "chiendo97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["anyio>=4"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "basedpyright>=1.29",
    "isort>=7.0.0",
    "pytest>=8",
    "pytest-benchmark>=5",
    "ruff>=0.11",
    "ipython>=9.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "all"

[tool.isort]
profile = "black"
